--- a/package.json
+++ b/package.json
@@ -12,6 +12,15 @@
   "keywords": [],
   "type": "module",
   "author": "",
+  "prettier" :{
+    "tabWidth": 2,
+    "useTabs": false,
+    "semi": true,
+    "singleQuote": true,
+    "trailingComma": "es5",
+    "bracketSpacing": true,
+    "arrowParens": "always"
+  },
   "license": "ISC",
   "devDependencies": {
     "jest": "^29.7.0"
