--- a/package.json
+++ b/package.json
@@ -1,18 +1,16 @@
 {
   "name": "blackjack-bbc-segs",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "directories": {
-    "test": "tests"
-  },
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "lint": "eslint .",
+    "preview": "vite preview",
     "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js"
   },
-  "keywords": [],
-  "type": "module",
-  "author": "",
-  "prettier" :{
+  "prettier": {
     "tabWidth": 2,
     "useTabs": false,
     "semi": true,
@@ -21,8 +19,21 @@
     "bracketSpacing": true,
     "arrowParens": "always"
   },
-  "license": "ISC",
+  "dependencies": {
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
+  },
   "devDependencies": {
-    "jest": "^29.7.0"
+    "@eslint/js": "^9.17.0",
+    "@types/react": "^18.3.18",
+    "@types/react-dom": "^18.3.5",
+    "@vitejs/plugin-react": "^4.3.4",
+    "eslint": "^9.17.0",
+    "eslint-plugin-react": "^7.37.2",
+    "eslint-plugin-react-hooks": "^5.0.0",
+    "eslint-plugin-react-refresh": "^0.4.16",
+    "globals": "^15.14.0",
+    "jest": "^29.7.0",
+    "vite": "^6.0.5"
   }
 }
