--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "globals": "^15.14.0",
     "jsdom": "^26.0.0",
     "playwright": "^1.49.1",
-    "vite": "6.0.9",
-    "vitest": "2.1.9"
+    "vite": "^6.3.2",
+    "vitest": "^3.1.2"
   }
 }
